--- a/index.html
+++ b/index.html
@@ -4,10 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Ice Cream Oasis</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="script.js"></script>
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;500;600;700&family=Lato:wght@100;300;400;700;900&family=Libre+Baskerville:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
+    <!-- Icons -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Tambahkan kode kalian di sini -->
+    <header >
+      <div class="header-wrapper w-max">
+        <div class="logo">
+          <h1>Ice Cream Oasis</h1>
+        </div>
+        <nav class="navbar">
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#product">Product</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="search">
+              <input type="text" placeholder="Search" />
+              <i class="bx bx-search"></i>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section id="hero">
+        <div class="left">
+          <h1>Welcome to <span>Ice Cream Oasis</span></h1>
+          <h3>Where every scoop is a smile!</h3>
+          <p class="mb-1">
+            Indulge in our creamy, dreamy ice cream, crafted with the freshest
+            ingredients and bursting with flavor
+          </p>
+          <button>Order Now</button>
+        </div>
+        <div class="right">
+          <img src="assets/images/ice_cream-removebg-preview_waifu2x_art_noise1_scale.png" alt="">
+        </div>
+      </section>
+      <section id="about"></section>
+      <section id="product"></section>
+      <section id="contact"></section>
+    </main>
+    <footer></footer>
   </body>
 </html>
