Create about section and update the style

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="script.js"></script>
     <!-- Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;500;600;700&family=Lato:wght@100;300;400;700;900&family=Libre+Baskerville:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;500;600;700&family=Lato:wght@100;300;400;700;900&family=Libre+Baskerville:wght@400;700&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
     <!-- Icons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -19,7 +22,7 @@
   </head>
   <body>
     <!-- Tambahkan kode kalian di sini -->
-    <header >
+    <header>
       <div class="header-wrapper w-max">
         <div class="logo">
           <h1>Ice Cream Oasis</h1>
@@ -50,10 +53,38 @@
           <button>Order Now</button>
         </div>
         <div class="right">
-          <img src="assets/images/ice_cream-removebg-preview_waifu2x_art_noise1_scale.png" alt="">
+          <img
+            src="assets/images/ice_cream-removebg-preview_waifu2x_art_noise1_scale.png"
+            alt=""
+          />
         </div>
       </section>
-      <section id="about"></section>
+      <section id="about">
+        <div class="about-wrapper w-max">
+          <div class="about-text">
+            <h1 class="mb-1">About Us</h1>
+            <p id="description">
+              "Welcome to Ice Cream Oasis, an online destination for ice cream lovers
+              everywhere! Our website is dedicated to showcasing our delicious ice
+              cream and providing you with all the information you need to plan
+              your visit. At Ice Cream Oasis, we believe that indulging in a scoop (or
+              two!) of creamy, dreamy ice cream is one of life's simplest
+              pleasures. That's why we created an ice cream shop that serves up
+              the freshest ingredients and most mouth-watering flavors. Join us on
+              this sweet journey and discover your new favorite flavor! At Ice Cream Oasis, we believe that life is too short to not indulge in the
+              simple pleasures. That's why we created an ice cream shop where
+              every scoop is crafted with love and attention to detail. Our
+              mission is to create an experience that brings joy to our customers
+              and their loved ones. We use only the finest and freshest
+              ingredients to create our creamy, dreamy ice cream."
+            </p>
+          </div>
+          <div class="about-img">
+            <img src="assets/images/aboutus.png" alt="">
+            <h1>ICE CREAM OASIS</h1>
+          </div>
+        </div>
+      </section>
       <section id="product"></section>
       <section id="contact"></section>
     </main>
