Create product section and update style

--- a/index.html
+++ b/index.html
@@ -64,28 +64,82 @@
           <div class="about-text">
             <h1 class="mb-1">About Us</h1>
             <p id="description">
-              "Welcome to Ice Cream Oasis, an online destination for ice cream lovers
-              everywhere! Our website is dedicated to showcasing our delicious ice
-              cream and providing you with all the information you need to plan
-              your visit. At Ice Cream Oasis, we believe that indulging in a scoop (or
-              two!) of creamy, dreamy ice cream is one of life's simplest
-              pleasures. That's why we created an ice cream shop that serves up
-              the freshest ingredients and most mouth-watering flavors. Join us on
-              this sweet journey and discover your new favorite flavor! At Ice Cream Oasis, we believe that life is too short to not indulge in the
-              simple pleasures. That's why we created an ice cream shop where
-              every scoop is crafted with love and attention to detail. Our
-              mission is to create an experience that brings joy to our customers
-              and their loved ones. We use only the finest and freshest
-              ingredients to create our creamy, dreamy ice cream."
+              "Welcome to Ice Cream Oasis, an online destination for ice cream
+              lovers everywhere! Our website is dedicated to showcasing our
+              delicious ice cream and providing you with all the information you
+              need to plan your visit. At Ice Cream Oasis, we believe that
+              indulging in a scoop (or two!) of creamy, dreamy ice cream is one
+              of life's simplest pleasures. That's why we created an ice cream
+              shop that serves up the freshest ingredients and most
+              mouth-watering flavors. Join us on this sweet journey and discover
+              your new favorite flavor! At Ice Cream Oasis, we believe that life
+              is too short to not indulge in the simple pleasures. That's why we
+              created an ice cream shop where every scoop is crafted with love
+              and attention to detail. Our mission is to create an experience
+              that brings joy to our customers and their loved ones. We use only
+              the finest and freshest ingredients to create our creamy, dreamy
+              ice cream."
             </p>
           </div>
           <div class="about-img">
-            <img src="assets/images/aboutus.png" alt="">
+            <img src="assets/images/aboutus.png" alt="" />
             <h1>ICE CREAM OASIS</h1>
           </div>
         </div>
       </section>
-      <section id="product"></section>
+      <section id="product">
+        <div class="product-wrapper w-max">
+          <div class="product-text">
+            <h1 class="mb-1">Our Product</h1>
+          </div>
+          <div class="product-img">
+            <div class="card">
+              <div class="card-wrapper">
+                <img src="assets/images/ice1.jpg" alt="" />
+                <h2>Strawberries & Cream Swirl</h2>
+                <p>
+                  a sweet and creamy combination of vanilla and strawberry ice
+                  cream swirled together for the perfect blend of fruity and
+                  indulgent flavors.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-wrapper">
+                <img src="assets/images/ice2.jpg" alt="" />
+                <h2>Berry Vanilla Twist</h2>
+                <p>
+                  a deliciously twisted combination of creamy vanilla ice cream
+                  and ripe, juicy strawberries for a refreshing and indulgent
+                  treat.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-wrapper">
+                <img src="assets/images/ice3.jpg" alt="" />
+                <h2>Vanilla Dream</h2>
+                <p>
+                  a decadent and creamy ice cream that's so delicious, it feels
+                  like you're dreaming. Made with the finest Madagascar vanilla
+                  beans, this flavor is a true vanilla lover's delight.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-wrapper">
+                <img src="assets/images/ice4.png" alt="" />
+                <h2>Berry Chocolate Creamsicle</h2>
+                <p>
+                  a creamy and dreamy ice cream featuring a delicious blend of
+                  vanilla, chocolate, and cream, swirled with sweet and tangy
+                  berry sauce for the perfect balance of flavors.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="contact"></section>
     </main>
     <footer></footer>
