--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <section id="hero">
         <div class="left">
           <h1>Welcome to <span>Ice Cream Oasis</span></h1>
-          <h3>Where every scoop is a smile!</h3>
+          <h3 class="mb-1">Where every scoop is a smile!</h3>
           <p class="mb-1">
             Indulge in our creamy, dreamy ice cream, crafted with the freshest
             ingredients and bursting with flavor
@@ -96,45 +96,58 @@
             <div class="card">
               <div class="card-wrapper">
                 <img src="assets/images/ice1.jpg" alt="" />
-                <h2>Strawberries & Cream Swirl</h2>
-                <p>
-                  a sweet and creamy combination of vanilla and strawberry ice
-                  cream swirled together for the perfect blend of fruity and
-                  indulgent flavors.
-                </p>
+                <div class="card-wrapper-text">
+                  <h2>Strawberries & Cream Swirl</h2>
+                  <p>
+                    a sweet and creamy combination of vanilla and strawberry ice
+                    cream swirled together for the perfect blend of fruity and
+                    indulgent flavors.
+                  </p>
+                </div>
+                <button>Buy</button>
               </div>
             </div>
             <div class="card">
               <div class="card-wrapper">
                 <img src="assets/images/ice2.jpg" alt="" />
-                <h2>Berry Vanilla Twist</h2>
-                <p>
-                  a deliciously twisted combination of creamy vanilla ice cream
-                  and ripe, juicy strawberries for a refreshing and indulgent
-                  treat.
-                </p>
+                <div class="card-wrapper-text">
+                  <h2>Berry Vanilla Twist</h2>
+                  <p>
+                    a deliciously twisted combination of creamy vanilla ice
+                    cream and ripe, juicy strawberries for a refreshing and
+                    indulgent treat.
+                  </p>
+                </div>
+                <button>Buy</button>
               </div>
             </div>
             <div class="card">
               <div class="card-wrapper">
                 <img src="assets/images/ice3.jpg" alt="" />
-                <h2>Vanilla Dream</h2>
-                <p>
-                  a decadent and creamy ice cream that's so delicious, it feels
-                  like you're dreaming. Made with the finest Madagascar vanilla
-                  beans, this flavor is a true vanilla lover's delight.
-                </p>
+                <div class="card-wrapper-text">
+                  <h2>Vanilla Dream</h2>
+                  <p>
+                    a decadent and creamy ice cream that's so delicious, it
+                    feels like you're dreaming. Made with the finest Madagascar
+                    vanilla beans, this flavor is a true vanilla lover's
+                    delight.
+                  </p>
+                </div>
+                <button>Buy</button>
               </div>
             </div>
             <div class="card">
               <div class="card-wrapper">
                 <img src="assets/images/ice4.png" alt="" />
-                <h2>Berry Chocolate Creamsicle</h2>
-                <p>
-                  a creamy and dreamy ice cream featuring a delicious blend of
-                  vanilla, chocolate, and cream, swirled with sweet and tangy
-                  berry sauce for the perfect balance of flavors.
-                </p>
+                <div class="card-wrapper-text">
+                  <h2>Berry Chocolate Creamsicle</h2>
+                  <p>
+                    a creamy and dreamy ice cream featuring a delicious blend of
+                    vanilla, chocolate, and cream, swirled with sweet and tangy
+                    berry sauce for the perfect balance of flavors.
+                  </p>
+                </div>
+                <button>Buy</button>
               </div>
             </div>
           </div>
