Create contact Us Section and update style

--- a/index.html
+++ b/index.html
@@ -153,7 +153,30 @@
           </div>
         </div>
       </section>
-      <section id="contact"></section>
+      <section id="contact">
+        <div class="contact-wrapper w-max">
+          <div class="contact-text mb-1">
+            <h1 class="mb-1">Contact Us</h1>
+            <p>
+              Order your favorite ice cream online and enjoy it from the comfort
+              of your own home with our online ordering and delivery services!
+            </p>
+          </div>
+          <form action="" class="contact-form">
+            <input type="text" id="name" placeholder="Name" />
+            <input type="text" id="city" placeholder="City" />
+            <input type="email" id="email" placeholder="Email" />
+            <input type="number" id="zip-code" placeholder="Zip code" />
+            <label for="" id="check"
+            >Dengan ini saya menyatakan data yang diisi pada form ini adalah
+            benar dan telah sesuai</label
+            >
+            <input type="checkbox" id="status" />
+            <button id="submit-form" type="submit">Submit</button>
+            <div id="warning"></div>
+          </form>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
