Create footer section and update style

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <nav class="navbar">
           <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#product">Product</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -168,8 +168,8 @@
             <input type="email" id="email" placeholder="Email" />
             <input type="number" id="zip-code" placeholder="Zip code" />
             <label for="" id="check"
-            >Dengan ini saya menyatakan data yang diisi pada form ini adalah
-            benar dan telah sesuai</label
+              >Dengan ini saya menyatakan data yang diisi pada form ini adalah
+              benar dan telah sesuai</label
             >
             <input type="checkbox" id="status" />
             <button id="submit-form" type="submit">Submit</button>
@@ -178,6 +178,36 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-text">
+          <h1>Ice Cream Oasis</h1>
+          <p>
+            Indulge in our creamy, dreamy ice cream, crafted with the freshest
+            ingredients and bursting with flavor
+          </p>
+        </div>
+        <div class="footer-link">
+          <h1>Quick Links</h1>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#product">Product</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="https://skilvul.com" id="link">Skilvul</a></li>
+          </ul>
+        </div>
+        <div class="footer-contact">
+          <h1>Contact Us</h1>
+          <ul>
+            <li><i class="bx bx-phone"></i> +62 812 3456 7890</li>
+            <li><i class="bx bx-envelope"></i> icecreamoasis@gmail.com</li>
+            <li><i class="bx bx-map"></i> Jl. Raya Cibubur No. 1, Cibubur</li>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>© 2023 Ice Cream Oasis. All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
