update navbar when click bar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Ice Cream Oasis</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="script.js"></script>
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,6 +27,9 @@
           <h1>Ice Cream Oasis</h1>
         </div>
         <nav class="navbar">
+          <div class="close-btn">
+            <button>X</button>
+          </div>
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -39,6 +41,9 @@
             </li>
           </ul>
         </nav>
+        <div class="bar menu-btn">
+          <i class="bx bx-menu"></i>
+        </div>
       </div>
     </header>
     <main>
@@ -51,6 +56,14 @@
             ingredients and bursting with flavor
           </p>
           <button>Order Now</button>
+          <div class="connect">
+            <h3 class="mb-1">Connect with us</h3>
+            <div class="social">
+              <a href="#"><i class="bx bxl-facebook"></i></a>
+              <a href="#"><i class="bx bxl-instagram"></i></a>
+              <a href="#"><i class="bx bxl-whatsapp"></i></a>
+            </div>
+          </div>
         </div>
         <div class="right">
           <img
@@ -209,5 +222,7 @@
         <p>© 2023 Ice Cream Oasis. All Rights Reserved.</p>
       </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
